<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".SurveyActivity">

	<TextView
		android:id="@+id/textView2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingHorizontal="16dp"
		android:paddingVertical="16dp"
		android:text="Survey"
		android:textStyle="bold"
		android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/survey_done_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginVertical="8dp"
		android:text="Next"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<ScrollView
		android:id="@+id/survey_questions_scrollV"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_marginTop="8dp"
		android:paddingBottom="8dp"
		app:layout_constraintBottom_toTopOf="@+id/survey_done_button"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView2">

		<LinearLayout
			android:id="@+id/survey_questions_ll"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="8dp"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="0dp" />

	</ScrollView>

	<LinearLayout
		android:id="@+id/survey_userinfo_linearLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="16dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView2"
		android:visibility="invisible"
		tools:context=".fragments.UserInfoFragment">

		<!-- Overview category -->
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<!-- Label -->
			<TextView
				style="@style/CategoryStyle"
				android:text="@string/category_overview" />

			<!-- Input fields -->
			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="2"
				android:orientation="vertical"
				android:paddingStart="4dp"

				android:paddingEnd="0dp">

				<!-- Name field -->
				<EditText
					android:id="@+id/edit_profile_name"
					style="@style/EditorFieldStyle"
					android:autofillHints="false"
					android:digits="@string/allowed_name_chars"
					android:hint="@string/hint_profile_name"
					android:inputType="textCapWords" />

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
					<!-- Age field -->
					<EditText
						android:id="@+id/edit_profile_age"
						style="@style/EditorFieldStyle"
						android:autofillHints="false"
						android:hint="@string/hint_profile_age"
						android:inputType="number" />

					<!-- Units for weight (cm) -->
					<TextView
						android:id="@+id/label_age_units"
						style="@style/EditorUnitsStyle"
						android:text="@string/unit_profile_age" />

				</RelativeLayout>

			</LinearLayout>

		</LinearLayout>

		<!-- Gender category -->
		<LinearLayout
			android:id="@+id/container_gender"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<!-- Label -->
			<TextView
				style="@style/CategoryStyle"
				android:text="@string/category_gender" />

			<!-- Input field -->
			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="2"
				android:orientation="vertical"
				android:paddingStart="4dp"
				android:paddingEnd="0dp">

				<!-- Gender drop-down spinner -->
				<Spinner
					android:id="@+id/spinner_gender"
					android:layout_width="wrap_content"
					android:layout_height="48dp"
					android:paddingStart="0dp"
					android:paddingEnd="16dp"
					android:spinnerMode="dropdown" />
			</LinearLayout>

		</LinearLayout>

		<!-- Measurement category -->
		<LinearLayout
			android:id="@+id/container_measurement"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<!-- Label -->
			<TextView
				style="@style/CategoryStyle"
				android:text="@string/category_measurement" />

			<!-- Input fields -->
			<LinearLayout
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="2"
				android:orientation="vertical">


				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingStart="4dp"
					android:paddingEnd="0dp">

					<!-- Height field -->
					<EditText
						android:id="@+id/edit_profile_height"
						style="@style/EditorFieldStyle"
						android:autofillHints="false"
						android:hint="@string/hint_profile_height"
						android:inputType="number" />

					<!-- Units for weight (cm) -->
					<TextView
						android:id="@+id/label_view_height_units"
						style="@style/EditorUnitsStyle"
						android:text="@string/unit_profile_height" />
				</RelativeLayout>

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingStart="4dp"
					android:paddingEnd="0dp">

					<!-- Weight field -->
					<EditText
						android:id="@+id/edit_profile_weight"
						style="@style/EditorFieldStyle"
						android:autofillHints="false"
						android:hint="@string/hint_profile_weight"
						android:inputType="number" />

					<!-- Units for weight (kg) -->
					<TextView
						android:id="@+id/label_weight_units"
						style="@style/EditorUnitsStyle"
						android:text="@string/unit_profile_weight" />
				</RelativeLayout>
			</LinearLayout>
		</LinearLayout>

		<Button
			android:id="@+id/userInfo_survey_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_marginTop="8dp"
			android:text="@string/okay"
			android:textAllCaps="false"
			android:textAppearance="@android:style/TextAppearance.DeviceDefault" />

	</LinearLayout>

	<ScrollView
		android:id="@+id/survey_consent_scroll"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:visibility="invisible"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView2">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:id="@+id/textView"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="32dp"
				android:padding="8dp"
				android:text="@string/asquire_subject_proforma"
				android:textAlignment="center"
				android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:paddingHorizontal="16dp"
				android:paddingVertical="16dp"
				android:text="@string/context_text" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<Button
					android:id="@+id/survey_consent_decline"
					style="?android:buttonBarButtonStyle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="32dp"
					android:layout_marginVertical="8dp"
					android:layout_weight="1"
					android:text="Decline" />

				<Button
					android:id="@+id/survey_consent_accept"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginHorizontal="32dp"
					android:layout_marginVertical="8dp"
					android:layout_weight="1"
					android:text="Accept" />

			</LinearLayout>

		</LinearLayout>

	</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>